--- a/templates/item.html
+++ b/templates/item.html
@@ -9,6 +9,9 @@
     <a href="/">Домой</a> / <a href = /items>Список товаров</a>
 </header>
 <h1>Страница товара {{ item.name }}</h1>
-Количество: <b>{{ item.quantity|default:"Товар отсутствует" }}</b><br>
+Наименование: <b>{{ item.name }}</b><br>
+Брэнд: <b>{{ item.brand }}</b><br>
+Количество: <b>{{ item.count|default:"Товар отсутствует" }}</b><br>
+Описание товара: <b>{{ item.info }}</b><br>
 </body>
 </html>
