--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<header>
-    <a href="/">Домой</a> / <a href = /items>Список товаров</a>
-</header>
-<h1>Главная страница сайта</h1>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>Главная страница сайта</h1>
+{% endblock %}
